--- a/bibs.bib
+++ b/bibs.bib
@@ -2556,3 +2556,31 @@ keywords = {testing tool, all-du-path coverage, parallel programming},
 location = {Clearwater Beach, Florida, USA},
 series = {ISSTA '98}
 }
+
+
+@misc{goleak,
+title={Uber goleak},
+url={https://github.com/uber-go/goleak},
+}
+
+@misc{lockdl,
+title={Online deadlock detection in go (golang)},
+url={https://github.com/sasha-s/go-deadlock},
+}
+
+
+@misc{dan-herbein-dong,
+title={Current and Future Converged Cloud-HPC Workflows at LLNL},
+author = {Milroy, Daniel J. and Herbein, Stephen and Ahn, Dong H. },
+url={https://sc20.supercomputing.org/proceedings/sotp/sotp_pages/sotp126.html},
+}
+
+
+@misc{ect-arxiv,
+      title={Automated Dynamic Concurrency Analysis for Go},
+      author={Saeed Taheri and Ganesh Gopalakrishnan},
+      year={2021},
+      eprint={2105.11064},
+      archivePrefix={arXiv},
+      primaryClass={cs.DC}
+}
