--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -50,7 +50,7 @@
 \begin{document}
 
 
-\title{Automated Dynamic Concurrency Analysis for Go}
+\title{\goat: Automated Dynamic Concurrency Analysis and Testing for Go}
 
 
 \author{\IEEEauthorblockN{Saeed Taheri}
