--- a/tabs/moby28462_minipage.tex
+++ b/tabs/moby28462_minipage.tex
@@ -54,5 +54,5 @@ func StatusChange(cnt *Container){
   \includegraphics[width=.99\linewidth]{figs/execViz_moby.pdf}
 \end{minipage}
 \caption{Simplified version of bug \texttt{moby28462}}
-\label{listing:moby28462}
+\label{listing:moby28462.minipage}
 \end{listing*}
