--- a/tabs/moby28462_minipage_codeOnly.tex
+++ b/tabs/moby28462_minipage_codeOnly.tex
@@ -51,5 +51,5 @@ func StatusChange(cnt *Cont){
 \end{minted}
 \end{minipage}
 \caption{Simplified version of bug \texttt{moby28462}}
-\label{listing:moby28462}
+\label{listing:moby28462.minipage.codeOnly}
 \end{listing}
